[gd_scene load_steps=20 format=3 uid="uid://jqitoetare6"]

[ext_resource type="Script" uid="uid://b4qdqhwk3y63w" path="res://Games/Pong/Scripts/pong_survival_manager.gd" id="1_jcasi"]
[ext_resource type="Script" uid="uid://cy0d05k2sudu5" path="res://Games/Pong/Scripts/pong_player.gd" id="2_bxknv"]
[ext_resource type="Script" uid="uid://bs6tax1wxufkp" path="res://Games/Pong/Scripts/pong_ball.gd" id="4_yffib"]

[sub_resource type="Gradient" id="Gradient_01x5j"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_m1rdx"]
gradient = SubResource("Gradient_01x5j")
width = 1

[sub_resource type="Gradient" id="Gradient_4jnus"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ytia8"]
gradient = SubResource("Gradient_4jnus")
width = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x5dyd"]
size = Vector2(1, 0.0154321)

[sub_resource type="Gradient" id="Gradient_emrk7"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_02tf3"]
gradient = SubResource("Gradient_emrk7")
width = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j6emb"]
size = Vector2(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l6fbb"]
size = Vector2(2.5, 6.5)

[sub_resource type="Gradient" id="Gradient_p5y0n"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_02wmw"]
gradient = SubResource("Gradient_p5y0n")
width = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ws6uw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xyrmq"]
size = Vector2(20, 2000)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f05av"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dfqgg"]
bg_color = Color(0.239216, 0.239216, 0.239216, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2mru5"]
bg_color = Color(1, 1, 1, 1)

[node name="Pong" type="Node2D"]
script = ExtResource("1_jcasi")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(1152, 648)
texture = SubResource("GradientTexture1D_m1rdx")

[node name="Background2" type="Sprite2D" parent="Background"]
scale = Vector2(1, 0.969136)
texture = SubResource("GradientTexture1D_ytia8")

[node name="StaticBody2D" type="StaticBody2D" parent="Background"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/StaticBody2D"]
position = Vector2(0, -0.492284)
shape = SubResource("RectangleShape2D_x5dyd")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Background/StaticBody2D"]
position = Vector2(0, 0.492)
shape = SubResource("RectangleShape2D_x5dyd")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(-476, 0)
script = ExtResource("2_bxknv")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(20, 100)
texture = SubResource("GradientTexture1D_02tf3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
scale = Vector2(20, 100)
shape = SubResource("RectangleShape2D_j6emb")

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2(560, 0)

[node name="Sprite2D" type="Sprite2D" parent="Wall"]
scale = Vector2(50, 650)
texture = SubResource("GradientTexture1D_02tf3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
scale = Vector2(20, 100)
shape = SubResource("RectangleShape2D_l6fbb")

[node name="Ball" type="CharacterBody2D" parent="."]
script = ExtResource("4_yffib")
speed_gain_percent = 1.05
rand_angle = 70.0

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
scale = Vector2(20, 20)
texture = SubResource("GradientTexture1D_02wmw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_ws6uw")

[node name="Player Fail Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Fail Area"]
position = Vector2(-650, 0)
shape = SubResource("RectangleShape2D_xyrmq")

[node name="Timer Text" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 175.0
offset_right = 120.0
offset_bottom = 305.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 92
text = "00:00"

[node name="Game Over Screen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SingleplayerContainer" type="VBoxContainer" parent="Game Over Screen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -245.0
offset_top = -158.0
offset_right = 205.0
offset_bottom = 242.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50

[node name="RestartBtn" type="Button" parent="Game Over Screen/SingleplayerContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_f05av")
theme_override_styles/hover = SubResource("StyleBoxFlat_dfqgg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2mru5")
text = "Restart"

[node name="MainMenuBtn" type="Button" parent="Game Over Screen/SingleplayerContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_f05av")
theme_override_styles/hover = SubResource("StyleBoxFlat_dfqgg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2mru5")
text = "Main Menu"

[node name="Game Over Title" type="RichTextLabel" parent="Game Over Screen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -520.0
offset_top = -270.0
offset_right = 480.0
offset_bottom = -20.0
grow_horizontal = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true
text = "[center]You survived for 00:00"

[connection signal="body_entered" from="Player Fail Area" to="." method="_on_player_fail_area_body_entered"]
[connection signal="pressed" from="Game Over Screen/SingleplayerContainer/RestartBtn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="Game Over Screen/SingleplayerContainer/MainMenuBtn" to="." method="_on_main_menu_btn_pressed"]
